--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="Avatar de Rodolpho Alvim, sorrindo, de barba e camisa azul"
         />
-        <p>@rodolphoalvim</p>
+        <p>@rodolpho_alvim</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -52,20 +52,29 @@
       </ul>
       <div id="social-links">
         <a href="https://github.com/rodolpho-alvim" target="_blank">
-          <ion-icon name="logo-github"></ion-icon
-        ></a>
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
         <a href="https://www.instagram.com/rodolpho_alvim/" target="_blank">
-          <ion-icon name="logo-instagram"></ion-icon
-        ></a>
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
         <a href="https://www.facebook.com/rodolpho.carvalho.7/" target="_blank">
-          <ion-icon name="logo-facebook"></ion-icon
-        ></a>
-        <a href="https://www.twitter.com/rodolpho_alvim/" target="_blank">
-          <ion-icon name="logo-twitter"></ion-icon
-        ></a>
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+        <a href="https://x.com/rodolpho_alvim/" target="_blank">
+          <svg
+            style="width: 24px; height: 24px; fill: currentColor"
+            viewBox="0 0 396 396"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M301.026 37.125H355.608L236.362 173.415L376.645 358.875H266.805L180.774 246.395L82.335 358.875H27.72L155.265 213.098L20.691 37.125H133.32L211.084 139.937L301.026 37.125ZM281.869 326.205H312.114L116.886 68.079H84.4305L281.869 326.205Z"
+            />
+          </svg>
+        </a>
       </div>
       <footer>
-        Feito com ♥︎ pela <a href="http://rocketseat.com.br">RocketSeat</a>
+        Feito por 👊😎
+        <a href="https://www.instagram.com/rodolpho_alvim/">Rodolpho Alvim</a>
       </footer>
     </div>
     <script
